@@ -12,6 +12,7 @@ import { enableLayoutMessage } from '../../utils/discord/componentUtils.js';
 
 export default class {
   private i18n: TFunction;
+  public isComponentV2 = false;
 
   constructor(
     private interactionToken: string,
@@ -44,6 +45,7 @@ export default class {
   async makeLayoutMessage(
     options: Omit<InteractionCallbackData, 'embed' | 'content' | 'stickers' | 'poll'>,
   ) {
+    this.isComponentV2 = true;
     return this.makeMessage(enableLayoutMessage(options));
   }
 
